[package]
name = "agama-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agama-l10n = { workspace = true }
agama-lib = { workspace = true }
agama-locale-data = { workspace = true }
agama-manager = { path = "../agama-manager" }
agama-network = { workspace = true }
agama-software = { workspace = true }
agama-transfer = { workspace = true }
agama-utils = { workspace = true }
aide = { version = "0.16.0-alpha.4", features = ["axum", "axum-extra", "axum-json", "axum-query", "macros"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8.9", features = ["ws", "macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
clap = { workspace = true }
config = "0.15.11"
indexmap = "2.7"
rand = "0.9.1"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["compression-br", "fs", "trace", "set-header",] }
tracing = { workspace = true }
zbus = { workspace = true }
# pam 0.8.0 (2023-11) plus an unreleased commit from 2023-12
# that switches from users to uzers, fixing CVE-2025-5791
futures-util = { workspace = true }
gethostname = "1.0.0"
gettext-rs = { workspace = true }
hyper = "1.4.1"
hyper-util = "0.1.9"
openssl = { workspace = true }
pam = { git = "https://github.com/1wilkens/pam.git", rev = "daf26ae" }
pin-project = { workspace = true }
sd-notify = "0.4.2"
tokio-openssl = "0.6.5"
tokio-util = "0.7.12"
url = { workspace = true }

[[bin]]
name = "agama-web-server"
path = "src/agama-web-server.rs"

[dev-dependencies]
http-body-util = "0.1.2"
test-context = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

# here we force runtime for bindgen otherwise pam-sys fails.
# Also it intentionally force old version of bindgen, which is
# the exact one that is used for pam-sys ( it looks like unmaintained for some years )
[build-dependencies]
bindgen = { version = "0.69.5", features = ["runtime"] }
