[package]
name = "agama-software"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-l10n = { workspace = true }
agama-security = { workspace = true }
agama-utils = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
gettext-rs = { workspace = true }
glob = { workspace = true }
i18n-format = { workspace = true }
openssl = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
suseconnect-agama = { path = "../suseconnect-agama" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zypp-agama = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
