[package]
name = "agama-storage-client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-utils = { path = "../agama-utils" }
thiserror = "2.0.18"
async-trait = "0.1.89"
zbus = "5.12.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0.228" }
serde_json = "1.0.145"
tracing = "0.1.44"

