[package]
name = "agama-users"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-access = { workspace = true }
agama-utils = { workspace = true }
async-trait = { workspace = true }
gettext-rs = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-context = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }
