[package]
name = "agama-utils"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-locale-data = { path = "../agama-locale-data" }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
utoipa = "5.3.1"
zbus = "5.7.1"
zvariant = "5.5.2"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4.4"
