[package]
name = "agama-utils"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-locale-data = { path = "../agama-locale-data" }
agama-transfer = { path = "../agama-transfer" }
async-trait = "0.1.89"
camino = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process", "sync"] }
tokio-stream = "0.1.17"
utoipa = { version = "5.3.1", features = ["url"] }
zbus = "5.7.1"
zvariant = "5.5.2"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
regex = "1.12.2"
tracing = "0.1.41"
serde_yaml = "0.9.34"
uuid = { version = "1.10.0", features = ["v4"] }
cidr = { version = "0.3.1", features = ["serde"] }
macaddr = { version = "1.0.1", features = ["serde_std"] }
fs-err = "3.2.0"
fluent-uri = { version = "0.4.1", features = ["serde"] }
tempfile = "3.23.0"
merge = "0.2.0"
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
test-context = "0.4.1"
tokio-test = "0.4.4"
