[package]
name = "agama-utils"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[features]
default = ["curl"]
curl = ["dep:agama-transfer"]

[dependencies]
agama-locale-data = { workspace = true }
agama-transfer = { workspace = true, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
cidr = { workspace = true }
fluent-uri = { workspace = true }
fs-err = "3.2.0"
gettext-rs = { workspace = true }
libsystemd = "0.7.2"
macaddr = { workspace = true }
merge = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-journald = "0.3.2"
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zbus = { workspace = true }
zvariant = "5.5.2"

[dev-dependencies]
test-context = { workspace = true }
tokio-test = { workspace = true }
