[package]
name = "libzypp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
ffi = { package = "zypp-sys", path = "./zypp-sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
