[package]
name = "suseconnect-agama"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lib]
name = "suseconnect_agama"
path = "src/lib.rs"


[[example]]
name = "announce"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
suseconnect-agama-sys = { path="./suseconnect-agama-sys" }
thiserror = "2.0.16"
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.20"