[package]
name = "suseconnect-agama"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lib]
name = "suseconnect_agama"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
suseconnect-agama-sys = { path="./suseconnect-agama-sys" }
thiserror = "2.0.18"
tracing = "0.1.44"
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27.0"
tracing-subscriber = "0.3.22"
