[package]
name = "suseconnect-agama"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lib]
name = "suseconnect_agama"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
suseconnect-agama-sys = { path="./suseconnect-agama-sys" }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
