[package]
name = "tui-bond-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agama-lib = { version = "1.0.0", path = "../agama-lib" }
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.29"
tui-realm-stdlib = "1.3.0"
tuirealm = "1.9.1"
