[package]
name = "xtask"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
agama-cli = { path = "../agama-cli" }
agama-server = { path = "../agama-server" }
agama-utils = { path = "../agama-utils" }
clap = { version = "4.5.19", default-features = false }
clap-markdown = "0.1.4"
clap_complete = "4.5.32"
clap_mangen = "0.2.23"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = "1.52.1"
